占位符光标和文字的修改

--- a/百思不得姐/Classes/Other/Controller/MKLoginViewController.xib
+++ b/百思不得姐/Classes/Other/Controller/MKLoginViewController.xib
@@ -123,7 +123,7 @@
                                 <constraint firstAttribute="width" constant="250" id="URP-4A-5kC"/>
                             </constraints>
                         </imageView>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="手机号" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="2MF-zd-9ke" userLabel="手机号">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="手机号" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="2MF-zd-9ke" userLabel="手机号" customClass="MKLoginRegisterTextField">
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="v3j-iG-ZNL"/>
                             </constraints>
@@ -131,7 +131,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="密码" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="e7E-t6-02L" userLabel="密码">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="密码" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="e7E-t6-02L" userLabel="密码" customClass="MKLoginRegisterTextField">
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="krY-3y-VLH"/>
                             </constraints>
@@ -192,7 +192,7 @@
                                 <constraint firstAttribute="width" constant="250" id="GBy-WK-hfK"/>
                             </constraints>
                         </imageView>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入手机号" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="ygV-Jg-E9c" userLabel="输入手机号">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入手机号" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="ygV-Jg-E9c" userLabel="输入手机号" customClass="MKLoginRegisterTextField">
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="24o-6v-8lT"/>
                             </constraints>
@@ -200,7 +200,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="设置密码" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="7bj-J3-kBj" userLabel="设置密码">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="设置密码" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="7bj-J3-kBj" userLabel="设置密码" customClass="MKLoginRegisterTextField">
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="vK0-Jk-NvC"/>
                             </constraints>
