--- a/百思不得姐/Classes/Other/Controller/MKLoginViewController.xib
+++ b/百思不得姐/Classes/Other/Controller/MKLoginViewController.xib
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,32 +21,40 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_register_background" translatesAutoresizingMaskIntoConstraints="NO" id="30b-MC-22s" userLabel="背景"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_register_background" translatesAutoresizingMaskIntoConstraints="NO" id="30b-MC-22s" userLabel="背景">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tfc-qT-eb7" userLabel="底部快速登录组">
+                    <rect key="frame" x="0.0" y="516.5" width="375" height="130.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="快速登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cuT-3Y-74S" userLabel="快速登录标题">
+                            <rect key="frame" x="153" y="0.0" width="69.5" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_register_right_line" translatesAutoresizingMaskIntoConstraints="NO" id="e4F-ko-LTB" userLabel="右线">
+                            <rect key="frame" x="225.5" y="10" width="103" height="1"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="S2q-fG-JZR"/>
                                 <constraint firstAttribute="width" constant="103" id="Zxh-Ha-Ki2"/>
                             </constraints>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_register_left_line" translatesAutoresizingMaskIntoConstraints="NO" id="VIV-G2-udp" userLabel="左线">
+                            <rect key="frame" x="45" y="10" width="103" height="1"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="103" id="Gg3-Aa-e3Z"/>
                                 <constraint firstAttribute="height" constant="1" id="Kka-MH-DEu"/>
                             </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eXW-cl-Phf" userLabel="QQ登录" customClass="MKQuickLoginButton">
+                            <rect key="frame" x="0.0" y="30.5" width="125" height="100"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <state key="normal" title="QQ登录" image="login_QQ_icon"/>
                             <state key="highlighted" title="QQ登录" image="login_QQ_icon_click"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u5V-P0-Sb9" userLabel="微博登录" customClass="MKQuickLoginButton">
+                            <rect key="frame" x="125" y="30.5" width="125" height="100"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="100" id="BbC-Ly-YlF"/>
                             </constraints>
@@ -53,6 +63,7 @@
                             <state key="highlighted" title="微博登录" image="login_sina_icon_click"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UNY-hy-yaG" userLabel="Q微登录" customClass="MKQuickLoginButton">
+                            <rect key="frame" x="250" y="30.5" width="125" height="100"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <state key="normal" title="腾讯微博" image="login_tecent_icon"/>
                             <state key="highlighted" title="腾讯微博" image="login_tecent_icon_click"/>
@@ -81,8 +92,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o9g-VP-5er">
+                    <rect key="frame" x="0.0" y="25" width="375" height="30"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DQx-mr-N8x">
+                            <rect key="frame" x="303" y="0.0" width="62" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="0mx-MW-ale"/>
                             </constraints>
@@ -94,6 +107,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iv5-po-U4n">
+                            <rect key="frame" x="0.0" y="0.0" width="50" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="Be8-yD-Z0I"/>
                                 <constraint firstAttribute="width" constant="50" id="m4d-Kc-y5S"/>
@@ -116,14 +130,17 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qse-ue-7Wq" userLabel="登录背景">
+                    <rect key="frame" x="0.0" y="135" width="375" height="171"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_rgister_textfield_bg" translatesAutoresizingMaskIntoConstraints="NO" id="Rmx-mm-NoJ" userLabel="输入框背景">
+                            <rect key="frame" x="62.5" y="0.0" width="250" height="80"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="80" id="CVX-tt-BLQ"/>
                                 <constraint firstAttribute="width" constant="250" id="URP-4A-5kC"/>
                             </constraints>
                         </imageView>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="手机号" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="2MF-zd-9ke" userLabel="手机号" customClass="MKLoginRegisterTextField">
+                            <rect key="frame" x="67.5" y="0.0" width="240" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="v3j-iG-ZNL"/>
                             </constraints>
@@ -132,6 +149,7 @@
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="密码" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="e7E-t6-02L" userLabel="密码" customClass="MKLoginRegisterTextField">
+                            <rect key="frame" x="67.5" y="40" width="240" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="krY-3y-VLH"/>
                             </constraints>
@@ -140,6 +158,7 @@
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Em-9k-bjt">
+                            <rect key="frame" x="62.5" y="95" width="250" height="30"/>
                             <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="lOO-cx-tZl"/>
@@ -154,6 +173,7 @@
                             </userDefinedRuntimeAttributes>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dbq-ha-Yvc">
+                            <rect key="frame" x="245" y="141" width="70" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="8i0-Ov-VmO"/>
                                 <constraint firstAttribute="width" constant="70" id="8l7-dz-byg"/>
@@ -185,14 +205,17 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uHZ-ea-84o" userLabel="注册背景">
+                    <rect key="frame" x="375" y="135" width="375" height="125"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_rgister_textfield_bg" translatesAutoresizingMaskIntoConstraints="NO" id="fgv-Zz-DoS" userLabel="输入框背景">
+                            <rect key="frame" x="62.5" y="0.0" width="250" height="80"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="80" id="EyS-Fe-PRj"/>
                                 <constraint firstAttribute="width" constant="250" id="GBy-WK-hfK"/>
                             </constraints>
                         </imageView>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入手机号" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="ygV-Jg-E9c" userLabel="输入手机号" customClass="MKLoginRegisterTextField">
+                            <rect key="frame" x="67.5" y="0.0" width="240" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="24o-6v-8lT"/>
                             </constraints>
@@ -201,6 +224,7 @@
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="设置密码" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="7bj-J3-kBj" userLabel="设置密码" customClass="MKLoginRegisterTextField">
+                            <rect key="frame" x="67.5" y="40" width="240" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="vK0-Jk-NvC"/>
                             </constraints>
@@ -209,6 +233,7 @@
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HGf-mN-swK" userLabel="完成注册">
+                            <rect key="frame" x="62.5" y="95" width="250" height="30"/>
                             <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="vjr-KB-OHB"/>
@@ -263,7 +288,7 @@
                 <constraint firstItem="30b-MC-22s" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="o0c-kW-A7v"/>
                 <constraint firstItem="qse-ue-7Wq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="o8c-b6-4N2"/>
             </constraints>
-            <point key="canvasLocation" x="26.5" y="52.5"/>
+            <point key="canvasLocation" x="-102" y="70"/>
         </view>
     </objects>
     <resources>
